<resources>
    <string name="app_name">StudentBuddyApp</string>
    <string name="main_menu_settings">Nustatymai</string>
    <string name="title_activity_settings_root">SettingsRootActivity</string>
    <string name="title_activity_login">Prisijungti</string>
    <string name="prompt_username">Slapyvardis</string>
    <string name="prompt_password">Slaptažodis</string>
    <string name="action_sign_in">Prisijungti</string>
    <string name="action_sign_in_short">Jungtis</string>
    <string name="error_invalid_username">Neteisingi prisijungimo duomenys</string>
    <string name="error_invalid_password">Neteisingi prisijungimo duomenys</string>
    <string name="error_incorrect_password">Neteisingi prisijungimo duomenys</string>
    <string name="error_field_required">Šis laukelis privalomas</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dummy_txt_id">e9e09a66-b64e-11e7-92ca-6b88c03d686c</string>
    <string name="lbl_id">ID</string>
    <string name="lbl_identificator">ID kodas</string>
    <string name="dummy_txt_identificator">s0204537</string>
    <string name="dummy_txt_email">andhop0304@yahoo.co.uk</string>
    <string name="main_menu_login">Prisijungti</string>
    <string name="dash">-</string>
    <string name="lbl_current_user">Current user:</string>
    <string name="title_discipline">Disciplina</string>
    <string name="lbl_discipline_name">Pavadinimas</string>
    <string name="lbl_discipline_school">Mokykla</string>
    <string name="lbl_discipline_description">Aprašas</string>
    <string name="lbl_discipline_lecturers">Lektoriai</string>
    <string name="dummy_txt_discipline_school">VIKO</string>
    <string name="dummy_txt_discipline_lecturers">4</string>
    <string name="dummy_txt_discipline_name">Matematika</string>
    <string name="dummy_txt_discipline_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lbl_discipline_id">@string/lbl_id</string>
    <string name="dummy_txt_discipline_id">@string/dummy_txt_id</string>
    <string name="title_floor_layout">Aukšto planas</string>
    <string name="lbl_floor_layout_id">@string/lbl_id</string>
    <string name="dummy_txt_floor_layout_id">@string/dummy_txt_id</string>
    <string name="lbl_lecture_start_date">Pradžia</string>
    <string name="lbl_lecture_location">Vieta</string>
    <string name="lbl_lecture_lecturer">Lektorius</string>
    <string name="lbl_lecture_students_group">Grupė</string>
    <string name="dummy_txt_lecture_students_group">PIN13</string>
    <string name="dummy_txt_lecture_location">MIF, 217</string>
    <string name="dummy_txt_lecture_lecturer">R. Janušauskienė</string>
    <string name="lbl_lecture_guests">Svečiai</string>
    <string name="dummy_txt_lecture_guests">3</string>
    <string name="lbl_lecture_tests">Testai</string>
    <string name="dummy_txt_lecture_tests">1</string>
    <string name="dummy_txt_lecture_assignments">0</string>
    <string name="lbl_lecture_assignments">Užduotys</string>
    <string name="lbl_lecture_comments">Komentarai</string>
    <string name="dummy_txt_lecture_comments">14</string>
    <string name="title_lecture">Paskaita</string>
    <string name="lbl_lecture_name">Pavadinimas</string>
    <string name="dummy_txt_lecture_name">Matematika</string>
    <string name="lbl_lecture_id">@string/lbl_id</string>
    <string name="dummy_txt_lecture_id">@string/dummy_txt_id</string>
    <string name="dummy_txt_lecture_start_date">2017-04-12</string>
    <string name="dummy_txt_lecture_start_time">13:25</string>
    <string name="dummy_txt_lecture_time_remaining">2d. 0:45</string>
    <string name="lbl_lecture_time_remaining">Iki pradžios</string>
    <string name="title_lecturer">Lektorius</string>
    <string name="lbl_lecturer_name">Vardas</string>
    <string name="dummy_txt_lecturer_disciplines">8</string>
    <string name="lbl_lecturer_disciplines">Disciplinos</string>
    <string name="lbl_lecturer_degree">Laipsnis</string>
    <string name="dummy_txt_lecturer_name">Andrew Hopkins</string>
    <string name="dummy_txt_lecturer_degree">Prof. hab. dr.</string>
    <string name="dummy_txt_lecturer_upcoming_lectures">Artimiausios paskaitos</string>
    <string name="lbl_lecturer_id">@string/lbl_id</string>
    <string name="dummy_txt_lecturer_id">@string/dummy_txt_id</string>
    <string name="dummy_txt_user_id">@string/dummy_txt_id</string>
    <string name="lbl_user_id">@string/lbl_id</string>
    <string name="dummy_txt_user_identification">@string/dummy_txt_identificator</string>
    <string name="dummy_txt_user_username">netikras</string>
    <string name="title_user">Naudotojas</string>
    <string name="lbl_person_identificator">@string/lbl_identificator</string>
    <string name="lbl_user_username">Slapyvardis</string>
    <string name="lbl_user_password">Slaptažodis</string>
    <string name="lbl_user_roles">Rolės</string>
    <string name="lbl_user_system_roles">Leidimai</string>
    <string name="lbl_user_person">Asmuo</string>
    <string name="dummy_txt_user_person">Andrew Hopkins</string>
    <string name="title_students_group">Grupė</string>
    <string name="lbl_students_group_name">Pavadinimas</string>
    <string name="lbl_students_group_school">Mokykla</string>
    <string name="lbl_students_group_email">El. p.</string>
    <string name="lbl_students_group_members">Studentai</string>
    <string name="dummy_txt_students_group_school">VIKO</string>
    <string name="dummy_txt_students_group_members">24</string>
    <string name="lbl_students_group_date_created">Sukūrimo data</string>
    <string name="lbl_students_group_id">@string/lbl_id</string>
    <string name="dummy_txt_students_group_name">PIN 13</string>
    <string name="dummy_txt_students_group_date_created">2013-08-27</string>
    <string name="dummy_txt_students_group_email">pin13@eif.viko.lt</string>
    <string name="title_settings">Nustatymai</string>
    <string name="lbl_settings_url">Adresas</string>
    <string name="dummy_txt_settings_url">http://netikras-s7e:8080/stubu</string>
    <string name="lbl_settings_lecture_notifications_enable">Pask. praneš.</string>
    <string name="lbl_settings_notifications_time_before_event">Pask. pran. likus</string>
    <string name="title_student">Studentas</string>
    <string name="lbl_student_name">Vardas</string>
    <string name="lbl_student_group">Grupė</string>
    <string name="lbl_student_school">Mokykla</string>
    <string name="dummy_txt_student_name">Andrew Hopkins</string>
    <string name="dummy_txt_student_group">PIN 13</string>
    <string name="dummy_txt_student_school">VIKO</string>
    <string name="dummy_txt_student_school_department">EIF</string>
    <string name="lbl_student_school_department">Fakultetas</string>
    <string name="lbl_student_date_created">Sukurtas</string>
    <string name="dummy_txt_student_date_created">2013-04-07</string>
    <string name="dummy_txt_student_identificator">@string/dummy_txt_identificator</string>
    <string name="dummy_txt_student_id">@string/dummy_txt_id</string>
    <string name="lbl_student_id">@string/lbl_id</string>
    <string name="title_person">Asmuo</string>
    <string name="lbl_person_name">Vardas</string>
    <string name="lbl_person_surname">Pavardė</string>
    <string name="lbl_person_email">El. p.</string>
    <string name="lbl_person_phone_number">Tel. nr.</string>
    <string name="lbl_user_identificator">@string/lbl_identificator</string>
    <string name="lbl_student_identificator">@string/lbl_identificator</string>
    <string name="lbl_person_roles">Rolės</string>
    <string name="lbl_person_id">@string/lbl_id</string>
    <string name="dummy_txt_person_id">@string/dummy_txt_id</string>
    <string name="dummy_txt_person_name">Andrew</string>
    <string name="dummy_txt_person_surname">Hopkins</string>
    <string name="dummy_txt_person_email">@string/dummy_txt_email</string>
    <string name="dummy_txt_person_phone_number">+37062233445</string>
    <string name="dummy_txt_person_identificator">@string/dummy_txt_identificator</string>
    <string name="lbl_person_date_created">Sukurtas</string>
    <string name="dummy_txt_person_date_created">2013-04-05</string>
    <string name="title_location">Vieta</string>
    <string name="lbl_location_name">Pavadinimas</string>
    <string name="dummy_txt_location_name">EIF</string>
    <string name="lbl_location_address">Adresas</string>
    <string name="lbl_location_building_section">Korpusas</string>
    <string name="lbl_location_floor">Aukštas</string>
    <string name="lbl_location_room">Patalpa</string>
    <string name="lbl_location_comments">Komentarai</string>
    <string name="dummy_txt_location_address">M.K. Čiurlionio g. 21</string>
    <string name="dummy_txt_location_building_section">-</string>
    <string name="dummy_txt_location_floor">4, Matematikų</string>
    <string name="dummy_txt_location_room">422, mat. aula</string>
    <string name="lbl_location_buildingid">Pastato ID</string>
    <string name="lbl_location_building_sectionid">Korpuso ID</string>
    <string name="lbl_location_floorid">Aukšto ID</string>
    <string name="lbl_location_roomid">Patalpos ID</string>
    <string name="dummy_txt_location_roomid">@string/dummy_txt_id</string>
    <string name="dummy_txt_location_floorid">@string/dummy_txt_id</string>
    <string name="dummy_txt_location_buildingid">@string/dummy_txt_id</string>
    <string name="dummy_txt_location_building_sectionid">@string/dummy_txt_id</string>
    <string name="title_lectures_list">Paskaitos</string>
    <string name="title_search">Paieška</string>
    <string name="menu_item_edit">Redaguoti</string>
    <string name="menu_item_delete">Ištrinti</string>
    <string name="menu_item_create">Sukurti</string>
    <string name="menu_item_save">Išsaugoti</string>
    <string name="menu_item_search">Ieškoti</string>
    <string name="menu_item_user">Naudotojas</string>
    <string name="txt_main_menu">º º º</string>
    <string name="some_error">Error</string>
    <string name="txt_btn_settings_save">Išsaugoti</string>
    <string name="txt_msg_user_has_no_person">Virtualus naudotojas neturi susieto asmens</string>
    <string name="txt_msg_user_missing">Nenurodytas naudotojas</string>
    <string name="title_school">Mokykla</string>
    <string name="lbl_school_id">@string/lbl_id</string>
    <string name="dummy_txt_school_id">@string/dummy_txt_id</string>
    <string name="title_school_department">Padalinys</string>
    <string name="lbl_school_department_id">@string/lbl_id</string>
    <string name="dummy_txt_school_department_id">@string/dummy_txt_id</string>
    <string name="lbl_building_id">@string/lbl_id</string>
    <string name="title_building">Pastatas</string>
    <string name="dummy_txt_building_id">@string/dummy_txt_id</string>
    <string name="lbl_comment_id">@string/lbl_id</string>
    <string name="dummy_txt_comment_id">@string/dummy_txt_id</string>
    <string name="title_comment">Komentaras</string>
    <string name="lbl_comment_title">Antraštė</string>
    <string name="lbl_comment_text">Komentaras</string>
    <string name="lbl_comment_author">Autorius</string>
    <string name="dummy_txt_comment_datetime_created">2017-04-12 07:43</string>
    <string name="lbl_comment_create_datetime">Sukurta</string>
    <string name="lbl_comment_tags">Žymos</string>
    <string name="main_menu_logout">Atsijungti</string>
    <string name="minutes_short">min.</string>
    <string name="hours_short">val.</string>
    <string name="lbl_settings_update_period">Atnaujinti kas</string>
    <string name="lbl_settings_notify_comments_enable">Koment. praneš</string>
    <string name="lbl_settings_lectures_ahead_period">Aktualus laikas</string>
    <string name="lbl_settings_autostart">Autom. paleid.</string>
    <string name="lbl_settings_notifications_enable">Pranešimai</string>
</resources>