<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_menu_login"
        android:title="@string/main_menu_login" />

    <item
        android:id="@+id/main_menu_user"
        android:title="@string/menu_item_user" />

    <item
        android:id="@+id/main_menu_settings"
        android:title="@string/main_menu_settings" />

    <item
        android:id="@+id/main_menu_edit"
        android:title="@string/menu_item_edit" />

    <item
        android:id="@+id/main_menu_delete"
        android:title="@string/menu_item_delete" />

    <item
        android:id="@+id/main_menu_create"
        android:title="@string/menu_item_create" />

    <item
        android:id="@+id/main_menu_save"
        android:title="@string/menu_item_save" />

    <item
        android:id="@+id/main_menu_search"
        android:title="@string/menu_item_search" />

    <item
        android:id="@+id/main_menu_logout"
        android:title="@string/main_menu_logout" />


</menu>
