<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/lay_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".pieces.settings.ui.impl.view.SettingsActivity">

        <ImageView
            android:id="@+id/img_settings_banner"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/settings_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_settings"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_settings_banner"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_lbl_settings_url"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_settings_url"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_edit_settings_url"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_edit_settings_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/dummy_txt_settings_url"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lbl_settings_url"
            app:layout_constraintTop_toBottomOf="@+id/img_settings_banner" />

        <TextView
            android:id="@+id/txt_lbl_settings_lecture_notifications_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_settings_lecture_notifications_enable"
            app:layout_constraintBaseline_toBaselineOf="@+id/switch_settings_lecture_notifications_enable"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/switch_settings_lecture_notifications_enable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lbl_settings_url"
            app:layout_constraintTop_toBottomOf="@+id/switch_settings_notifications_enable" />

        <TextView
            android:id="@+id/txt_lbl_settings_notifications_time_before_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_settings_notifications_time_before_event"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_edit_settings_notify_event_before"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_lbl_settings_lectures_ahead_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_settings_lectures_ahead_period"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_edit_settings_lectures_ahead_period"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_edit_settings_lectures_ahead_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lbl_settings_url"
            app:layout_constraintTop_toBottomOf="@+id/txt_edit_settings_notify_event_before" />

        <TextView
            android:id="@+id/txt_lbl_settings_hours_short_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/hours_short"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_edit_settings_lectures_ahead_period"
            app:layout_constraintStart_toEndOf="@+id/txt_edit_settings_lectures_ahead_period" />

        <TextView
            android:id="@+id/txt_lbl_settings_update_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_settings_update_period"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_edit_settings_update_period"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_edit_settings_update_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lbl_settings_url"
            app:layout_constraintTop_toBottomOf="@+id/txt_edit_settings_lectures_ahead_period" />

        <TextView
            android:id="@+id/txt_lbl_settings_minutes_short_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/minutes_short"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_edit_settings_update_period"
            app:layout_constraintStart_toEndOf="@+id/txt_edit_settings_update_period" />

        <Switch
            android:id="@+id/switch_settings_notify_comments_enable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:splitTrack="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lbl_settings_url"
            app:layout_constraintTop_toBottomOf="@+id/switch_settings_lecture_notifications_enable"
            tools:checked="true" />

        <TextView
            android:id="@+id/txt_lbl_settings_notify_comments_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_settings_notify_comments_enable"
            app:layout_constraintBaseline_toBaselineOf="@+id/switch_settings_notify_comments_enable"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_edit_settings_notify_event_before"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lbl_settings_url"
            app:layout_constraintTop_toBottomOf="@+id/switch_settings_notify_comments_enable" />

        <TextView
            android:id="@+id/txt_lbl_settings_minutes_short_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/minutes_short"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_edit_settings_notify_event_before"
            app:layout_constraintStart_toEndOf="@+id/txt_edit_settings_notify_event_before" />


        <TextView
            android:id="@+id/txt_lbl_settings_autostart_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_settings_autostart"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/switch_settings_autostart_enable"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/switch_settings_autostart_enable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lbl_settings_url"
            app:layout_constraintTop_toBottomOf="@+id/txt_edit_settings_url"
            tools:checked="true" />

        <TextView
            android:id="@+id/txt_lbl_settings_notifications_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_settings_notifications_enable"
            app:layout_constraintBaseline_toBaselineOf="@+id/switch_settings_notifications_enable"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/switch_settings_notifications_enable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lbl_settings_url"
            app:layout_constraintTop_toBottomOf="@+id/switch_settings_autostart_enable"
            tools:checked="true" />


        <include layout="@layout/include_main_menu_button" />
        <!-- Progress bar overlay; shown while login is in progress -->
        <include layout="@layout/include_progress_overlay" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>